--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ per-file-ignores =
   # Allow to have magic numbers inside migrations and wrong module names:
   server/*/migrations/*.py: WPS102, WPS432
   # Enable `assert` keyword and magic numbers for tests:
-  tests/*.py: S101, WPS432
+  server_tests/*.py: S101, WPS432
 
 
 [isort]
@@ -73,8 +73,8 @@ addopts =
   --fail-on-template-vars
   # -n auto
   # --boxed
-  --cov=server
-  --cov=tests
+  # --cov=server
+  # --cov=tests
   --cov-branch
   --cov-report=term-missing:skip-covered
   --cov-report=html
