--- a/config/.env.template
+++ b/config/.env.template
@@ -18,6 +18,7 @@ TLS_EMAIL=webmaster@ticket.linkentools.com
 # python3 -c 'import secrets; print(secrets.token_hex(50))'
 
 DJANGO_SECRET_KEY=__CHANGEME__
+TICKETMASTER_API_KEY=__CHANGEME__
 
 
 # === Database ===
