--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ per-file-ignores =
   # Allow `__init__.py` with logic for configuration:
   server/settings/*.py: WPS226, WPS407, WPS412, WPS432
   # Allow to have magic numbers inside migrations and wrong module names:
-  server/*/migrations/*.py: WPS102, WPS432
+  server/*/migrations/*.py: D101, E501, WPS102, WPS219, WPS301, WPS432
   # Enable `assert` keyword and magic numbers for tests:
   server_tests/*.py: S101, WPS432
 
