adding event_schema

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ enable-extensions = G
 # Flake plugins:
 max-line-length = 80
 max-complexity = 6
+max-string-usages=10
 
 # Excluding some directories:
 exclude = .git,__pycache__,.venv,.eggs,*.egg
@@ -29,7 +30,7 @@ per-file-ignores =
   # Allow to have magic numbers inside migrations and wrong module names:
   server/*/migrations/*.py: D101, E501, WPS102, WPS219, WPS301, WPS432
   # Enable `assert` keyword and magic numbers for tests:
-  server_tests/*.py: S101, WPS226, WPS432
+  server_tests/*.py: S101, WPS204, WPS226, WPS432
 
 
 [isort]
