--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ djangorestframework-filters = "1.0.0.dev0"
 django-crispy-forms = "^1.9.0"
 pytest-vcr = "^1.0.2"
 tqdm = "^4.45.0"
+jsonschema = "^3.2.0"
 
 
 [tool.poetry.dev-dependencies]
