--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ django-crispy-forms = "^1.9.0"
 pytest-vcr = "^1.0.2"
 tqdm = "^4.45.0"
 jsonschema = "^3.2.0"
+uwsgi = "^2.0.18"
 
 
 [tool.poetry.dev-dependencies]
